--- a/Ravine/Ravine.vcxproj.filters
+++ b/Ravine/Ravine.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stb_image.h">
+    <ClInclude Include="SingleFileLibraries\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
