--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -151,6 +151,8 @@
     <ClCompile Include="SingleFileLibraries\imgui.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_demo.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_draw.cpp" />
+    <ClCompile Include="SingleFileLibraries\imgui_impl_glfw.cpp" />
+    <ClCompile Include="SingleFileLibraries\imgui_impl_vulkan.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_widgets.cpp" />
     <ClCompile Include="Time.cpp" />
   </ItemGroup>
@@ -158,6 +160,8 @@
     <ClInclude Include="Ravine.h" />
     <ClInclude Include="SingleFileLibraries\imconfig.h" />
     <ClInclude Include="SingleFileLibraries\imgui.h" />
+    <ClInclude Include="SingleFileLibraries\imgui_impl_glfw.h" />
+    <ClInclude Include="SingleFileLibraries\imgui_impl_vulkan.h" />
     <ClInclude Include="SingleFileLibraries\imgui_internal.h" />
     <ClInclude Include="SingleFileLibraries\imstb_rectpack.h" />
     <ClInclude Include="SingleFileLibraries\imstb_textedit.h" />
