--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="SingleFileLibraries\imgui_impl_vulkan.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_widgets.cpp" />
     <ClCompile Include="Time.cpp" />
+    <ClCompile Include="VulkanDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ravine.h" />
@@ -168,6 +169,7 @@
     <ClInclude Include="SingleFileLibraries\imstb_truetype.h" />
     <ClInclude Include="SingleFileLibraries\stb_image.h" />
     <ClInclude Include="Time.h" />
+    <ClInclude Include="VulkanDevice.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\data\shaders\imgui.frag" />
