--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Ravine.cpp" />
     <ClCompile Include="RVGraphicsPipeline.cpp" />
+    <ClCompile Include="RVRenderPass.cpp" />
     <ClCompile Include="RVSwapChain.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_demo.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="RVDataTypes.h" />
     <ClInclude Include="Ravine.h" />
     <ClInclude Include="RVGraphicsPipeline.h" />
+    <ClInclude Include="RVRenderPass.h" />
     <ClInclude Include="RVSwapChain.h" />
     <ClInclude Include="SingleFileLibraries\imconfig.h" />
     <ClInclude Include="SingleFileLibraries\imgui.h" />
