--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -148,9 +148,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Ravine.cpp" />
-    <ClCompile Include="RVGraphicsPipeline.cpp" />
-    <ClCompile Include="RVRenderPass.cpp" />
-    <ClCompile Include="RVSwapChain.cpp" />
+    <ClCompile Include="RvDevice.cpp" />
+    <ClCompile Include="RvGraphicsPipeline.cpp" />
+    <ClCompile Include="RvSwapChain.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_demo.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_draw.cpp" />
@@ -158,16 +158,17 @@
     <ClCompile Include="SingleFileLibraries\imgui_impl_vulkan.cpp" />
     <ClCompile Include="SingleFileLibraries\imgui_widgets.cpp" />
     <ClCompile Include="Time.cpp" />
-    <ClCompile Include="RVDevice.cpp" />
     <ClCompile Include="VulkanTools.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RVConfig.h" />
-    <ClInclude Include="RVDataTypes.h" />
     <ClInclude Include="Ravine.h" />
-    <ClInclude Include="RVGraphicsPipeline.h" />
-    <ClInclude Include="RVRenderPass.h" />
-    <ClInclude Include="RVSwapChain.h" />
+    <ClInclude Include="RvConfig.h" />
+    <ClInclude Include="RvDataTypes.h" />
+    <ClInclude Include="RvDevice.h" />
+    <ClInclude Include="RvGraphicsPipeline.h" />
+    <ClInclude Include="RvFramebufferAttachment.h" />
+    <ClInclude Include="RvSwapChain.h" />
+    <ClInclude Include="RvUniformTypes.h" />
     <ClInclude Include="SingleFileLibraries\imconfig.h" />
     <ClInclude Include="SingleFileLibraries\imgui.h" />
     <ClInclude Include="SingleFileLibraries\imgui_impl_glfw.h" />
@@ -178,8 +179,6 @@
     <ClInclude Include="SingleFileLibraries\imstb_truetype.h" />
     <ClInclude Include="SingleFileLibraries\stb_image.h" />
     <ClInclude Include="Time.h" />
-    <ClInclude Include="RVUniformTypes.h" />
-    <ClInclude Include="RVDevice.h" />
     <ClInclude Include="VulkanTools.h" />
   </ItemGroup>
   <ItemGroup>
