--- a/Ravine/Ravine.vcxproj.filters
+++ b/Ravine/Ravine.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="RvConfig.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RvWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SingleFileLibraries\stb_image.h">
@@ -133,6 +136,9 @@
     </ClInclude>
     <ClInclude Include="RvConfig.h">
       <Filter>Header Files\Ravine System</Filter>
+    </ClInclude>
+    <ClInclude Include="RvWindow.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
